--- a/wishlist/templates/register.html
+++ b/wishlist/templates/register.html
@@ -6,29 +6,91 @@
 
 {% block content %}  
 
-<div class = "login">
+<nav class="navbar navbar-light" style="background-color: #272727;">
+    <b class="navbar-brand" style = "color:#FFFDED; margin-left: 10px; margin-right: 700px">Carissa Almira Yudiva</b>
+    <button><a href = "{% url 'wishlist:logout' %}">Logout</a></button>
+</nav>
+
+<link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
+<link href='https://fonts.googleapis.com/css?family=Pinyon Script' rel='stylesheet'>
+<style>
+    body {
+        font-family: "Poppins";
+        color:#201335;
+        font-size: 13px;
+        margin: 0;
+        background-image: url(https://cdn.discordapp.com/attachments/1024881450786492487/1024881554452926504/pic-1.gif);
+        align-items: center;
+        text-align: center;
+    }
+    input, textarea, select, button {
+        font-family: 'Poppins';
+        color: #4F4789;
+        font-size: 13px;
+        align-items: center;
+        text-align: center;
+    }
+    img { max-width: 100%; }
+    a {
+        color: #FFB17A;
+        font-size: small;
+        text-decoration-line: none;
+        font-family: 'Poppins';
+        align-items: center;
+        text-align: center;
+    }
+    h1 {
+        font-size: 60px;
+        font-family: 'Pinyon Script';
+        text-align: center;
+        margin-bottom: 28px;
+        color: #0eb632;
+    }
     
-    <h1>Formulir Registrasi</h1>  
+    button {
+        border-radius: 5px;
+        background-color: #1f1f1f;
+        border: #201335;
+        padding: 10px 16px;
+        text-align: center;
+        text-decoration: none;
+        display: inline-block;
+        font-family: 'Poppins';
+        font-size: small;
+    }
+    b { 
+        margin-top: 10px;
+        font-size: large;
+        color: #201335;
+        margin-bottom: 10px;
+        font-family: 'Poppins';}
 
-        <form method="POST" >  
-            {% csrf_token %}  
-            <table>  
-                {{ form.as_table }}  
-                <tr>  
-                    <td></td>
-                    <td><input type="submit" name="submit" value="Daftar"/></td>  
-                </tr>  
-            </table>  
-        </form>
+</style>
 
-    {% if messages %}  
-        <ul>   
-            {% for message in messages %}  
-                <li>{{ message }}</li>  
-                {% endfor %}  
-        </ul>   
-    {% endif %}
-
+<div ALIGN = 'center'>
+    <div class = "login">
+    
+        <h1> 𓆇 Registration Form 𓆇</h1>  
+    
+            <form method="POST" >  
+                {% csrf_token %}  
+                <table>  
+                    {{ form.as_table }}  
+                    <tr>  
+                        <td></td>
+                        <td><input type="submit" name="submit" value="Register"/></td>  
+                    </tr>  
+                </table>  
+            </form>
+    
+        {% if messages %}  
+            <ul>   
+                {% for message in messages %}  
+                    <li>{{ message }}</li>  
+                    {% endfor %}  
+            </ul>   
+        {% endif %}
+    </div>  
 </div>  
 
 {% endblock content %}
